codegen/c/src/snapshots/transmute_codegen_c__tests__op_minus.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
#include <stdbool.h>

void _TM0_F1f0_0(void);

void _TM0_F1f0_0(void)
{
    -1;
    return;
}
